# Redhead

./: .directory  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  lgpl.html  lgpl.odt  lgpl.rtf  lgpl.texi  lgpl.txt
config/: helloWorld_hostfile.txt  settings.h
include/StencilForTxHPC/: TxHPC.h  physis_api.h
include/StencilForTxHPC/TxHPC/: Makefile  README  exps_dram.sh  exps_lfs.sh  r6_emu.c  r6_emu_dram  r6_emu_lfs  r6_log
include/StencilForTxHPC/TxHPC/arch_probe/: arch_probe  arch_probe.c
include/StencilForTxHPC/TxHPC/gf-complete/include/: gf_complete.h
include/StencilForTxHPC/TxHPC/gf-complete/src/: gf_w128.c  gf_w32.c
include/StencilForTxHPC/TxHPC/raid6/include/: r6_utils.h
include/StencilForTxHPC/TxHPC/raid6/src/: r6.c
include/StencilForTxHPC/TxHPC/results/: log_before_crash
include/StencilForTxHPC/TxHPC/results/DRAM/: r6_log_1073741824  r6_log_1099511627776  r6_log_131072  r6_log_2147483648  r6_log_32768  r6_log_536870912  r6_log_68719476736
include/StencilForTxHPC/TxHPC/results/LFS/: r6_log_137438953472  r6_log_33554432  r6_log_524288  r6_log_65536
include/StencilForTxHPC/TxHPC/results/app_shm/: r6_log_16384  r6_log_268435456  r6_log_34359738368  r6_log_4294967296
include/StencilForTxHPC/TxHPC/results/r6DRAM/: r6_log_16384  r6_log_262144  r6_log_33554432  r6_log_4194304  r6_log_536870912  r6_log_68719476736
include/StencilForTxHPC/TxHPC/results/r6DRAM_nf/: r6_log_17179869184  r6_log_2147483648  r6_log_32768
include/StencilForTxHPC/TxHPC/results/shm/: r6_log_268435456  r6_log_536870912  r6_log_8388608
include/StencilForTxHPC/TxHPC/results/shm_nf/: r6_log_16777216  r6_log_4194304  r6_log_549755813888
include/StencilForTxHPC/TxHPC4TM/: .r6_log.swp  Makefile  Makefile_cpy_no_simd  README  crash.sh  exps.sh  exps_DRAM.sh  exps_dram.sh  exps_lfs.sh  exps_shm.sh  r6_emu.c  r6_emu_shm  r6_log
include/StencilForTxHPC/TxHPC4TM/apps/: app_emu.c  r6_emu_cpy.c  r6_emu_test_cpy.c
include/StencilForTxHPC/TxHPC4TM/arch_probe/: Makefile  arch_probe  arch_probe.c
include/StencilForTxHPC/TxHPC4TM/arch_probe/arch_probe_arm/: Makefile  arch_probe.c
include/StencilForTxHPC/TxHPC4TM/jerasure/src/: jerasure.c
include/StencilForTxHPC/TxHPC4TM/newresults/lfs_nf_ns_rs/: r6_log_1048576  r6_log_134217728  r6_log_2097152  r6_log_4194304  r6_log_65536  r6_log_67108864
include/StencilForTxHPC/TxHPC4TM/raid6/include/: r6_utils.h
include/StencilForTxHPC/TxHPC4TM/raid6/src/: r6.c
include/StencilForTxHPC/TxHPC4TM/results/: log_after_crash_bef  log_before_crash_bef  r6_log
include/StencilForTxHPC/TxHPC4TM/results/DRAM/: r6_log_16384  r6_log_33554432  r6_log_549755813888  (+2 more)
include/StencilForTxHPC/__deprecatedTxHPC4TMv2/: Makefile  exps_DRAM.sh  exps_dram.sh  r6_emu  r6_emu.c  r6_emu_shm  r6_log
include/StencilForTxHPC/__deprecatedTxHPC4TMv2/arch_probe/: Makefile
include/StencilForTxHPC/__deprecatedTxHPC4TMv2/results/: log_after_crash
include/StencilForTxHPC/_deprecated_TxHPC/: Makefile  README  crash.sh  exps_DRAM.sh  exps_dram.sh  exps_lfs.sh  exps_shm.sh  r6_emu  r6_emu.c  r6_emu_dram  r6_emu_lfs
include/StencilForTxHPC/_deprecated_TxHPC/apps/: app_emu  app_emu.c
include/StencilForTxHPC/_deprecated_TxHPC/raid6/: test.c  test.h
include/StencilForTxHPC/_deprecated_TxHPC/results/: log_after_crash
include/StencilForTxHPC/_deprecated_TxHPC4TM/: Makefile  README  exps_lfs.sh  exps_shm.sh  r6_emu.c  r6_emu_shm  r6_log
include/StencilForTxHPC/_deprecated_TxHPC4TM/apps/: app_emu  r6_emu_test_cpy.c
include/gnuplot/: gnuplot-iostream.h
include/portable_pointer/: catalogue.h  meta_entry.h  portable_pointer.h  ptm_type_traits.h
scripts/: mv_output.sh
src/applications/: README.md  _deprecated_TxHPC_jacobian.cpp  access_example.cpp  access_example.h  gameOfLife.cpp  gameOfLife.h  jacobian.cpp  jacobian.h  run_applications.cpp  sparseMatrixMultiplication.cpp  sparseMatrixMultiplication.h  v2_SparseM.cpp  v2_SparseM.h
src/helloWorlds/: MPIhelloWorld.cpp  TxHPC_HelloWorld.cpp
src/measurements/: measure_lfs_devshm.cpp  run_applications.cpp
tests/: translation_test.cpp
(+192 files in other folders)
